# CryptoVote

./: CMakeLists.txt  Doxyfile
doc/html/: Block_8cpp.html  Block_8cpp__incl.map  Block_8cpp__incl.md5  Block_8h.html  Block_8h__dep__incl.map  Block_8h__dep__incl.md5  Block_8h__incl.map  Block_8h__incl.md5  Block_8h_source.html  Blockchain_8cpp.html  Blockchain_8cpp__incl.map  Blockchain_8cpp__incl.md5  Blockchain_8h.html  Blockchain_8h__dep__incl.map  Blockchain_8h__dep__incl.md5  Blockchain_8h__incl.map  Blockchain_8h__incl.md5  Blockchain_8h_source.html  SecurityManager_8cpp.html  SecurityManager_8cpp__incl.map  SecurityManager_8cpp__incl.md5  SecurityManager_8h.html  SecurityManager_8h__dep__incl.map  SecurityManager_8h__dep__incl.md5  SecurityManager_8h__incl.map  SecurityManager_8h__incl.md5  SecurityManager_8h_source.html  User_8cpp.html  User_8cpp__incl.map  User_8cpp__incl.md5  User_8h.html  User_8h__dep__incl.map  User_8h__dep__incl.md5  User_8h__incl.map  User_8h__incl.md5  User_8h_source.html  VoteFactory_8cpp.html  VoteFactory_8cpp__incl.map  VoteFactory_8cpp__incl.md5  VoteFactory_8h.html  (+73 more)
doc/latex/: Block_8cpp.tex  Block_8cpp__incl.md5  Block_8h.tex  Block_8h__dep__incl.md5  Block_8h__incl.md5  Block_8h_source.tex  Blockchain_8cpp.tex  Blockchain_8cpp__incl.md5  Blockchain_8h.tex  Blockchain_8h__dep__incl.md5  Blockchain_8h__incl.md5  Blockchain_8h_source.tex  SecurityManager_8cpp.tex  SecurityManager_8cpp__incl.md5  SecurityManager_8h.tex  SecurityManager_8h__dep__incl.md5  SecurityManager_8h__incl.md5  SecurityManager_8h_source.tex  User_8cpp.tex  User_8cpp__incl.md5  User_8h.tex  User_8h__dep__incl.md5  User_8h__incl.md5  User_8h_source.tex  VoteFactory_8cpp.tex  VoteFactory_8cpp__incl.md5  VoteFactory_8h.tex  VoteFactory_8h__dep__incl.md5  VoteFactory_8h__incl.md5  VoteFactory_8h_source.tex  Vote_8cpp.tex  Vote_8cpp__incl.md5  Vote_8h.tex  Vote_8h__dep__incl.md5  Vote_8h__incl.md5  Vote_8h_source.tex  VotingSystem_8cpp.tex  VotingSystem_8cpp__incl.md5  VotingSystem_8h.tex  (+29 more)
src/: Block.cpp  Block.h  Blockchain.cpp  Blockchain.h  CLI.cpp  CLI.h  CMakeLists.txt  SecurityManager.cpp  SecurityManager.h  User.cpp  User.h  Vote.cpp  Vote.h  VoteFactory.cpp  VoteFactory.h  VotingSystem.cpp  VotingSystem.h  VotingToken.cpp  VotingToken.h  Wallet.cpp  Wallet.h  main.cpp
test/: CMakeLists.txt  security_manager_test.cpp  test.cpp  test_blockchain.cpp  user_test.cpp  vote_test.cpp  voting_system_integration_test.cpp  voting_system_test.cpp
(+35 files in other folders)
